# dcc-codingsession-pybind11

./: README.md
mymathapp/: CMakeLists.txt  main.cpp  mymath.h
pymymath/: pyproject.toml  setup.py
pymymath/mymath/: mymath.cpp
pymymath/src/: bindings.cpp
